--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="./main.html"><i class="wi wi-day-cloudy"></i></a>
             </div>
             <h2>Today`s Weather</h2>
-            <p>product by 안재욱</p>
+            <p>product by 김현준</p>
         </div>
     </section>
 <!-- 
