--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- content="대기시간(초); url=이동시킬 파일명 또는 주소" -->
     <title>WeatherApp_Intro</title>
     <link rel="shortcut icon" href="./img/wi-day-cloudy.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/weather-icons.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./CSS/weather-icons.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     
 </head>
 <body>
