--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherApp_Main</title>
     <link rel="shortcut icon" href="./img/wi-day-cloudy.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/weather-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./CSS/weather-icons.css">
+    <link rel="stylesheet" href="./CSS/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/main.js"></script>
 </head>
